Issue 501: Multiple stops in Sign mode overlap with transit text
1) Remove fixed height of header.

--- a/onebusaway-webapp/src/main/webapp/WEB-INF/css/where-sign-stop.css
+++ b/onebusaway-webapp/src/main/webapp/WEB-INF/css/where-sign-stop.css
@@ -20,9 +20,9 @@
 }
 
 .stopNameHeader {
-	height: 50px;
+	/*height: 50px;*/
 	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-bottom: 20px;
 	padding-left: 80px;
 	margin-bottom: 20px;
 
